# binance_kraken_demo

./: .gitignore  Dockerfile  README.md  Taskfile.yml  docker-compose.override.yml  docker-compose.yml  manage.py  pyproject.toml
common/: types.py
common/interfaces/: interactors.py  price_service.py  price_worker.py  repositories.py  workers.py
common/workers/: __init__.py
config/: settings.py  urls.py
src/prices/: apps.py  dtos.py  enums.py  exceptions.py  views.py
src/prices/datastructures/: price_ticker.py  price_ticker_aggregated.py
src/prices/interactors/: get_prices.py
src/prices/repositories/: prices.py
src/prices/routers/: prices.py
src/prices/services/: prices.py
src/prices/workers/: __init__.py  binance.py  kraken.py
